pine_script_references/v3/categories/variables.md
# Variables

## Variables

- `accdist`
- `close`
- `dayofmonth`
- `dayofweek`
- `high`
- `hl2`
- `hlc3`
- `hour`
- `interval`
- `isdaily`
- `isdwm`
- `isintraday`
- `isminutes`
- `ismonthly`
- `isseconds`
- `isweekly`
- `low`
- `minute`
- `month`
- `n`
- `na`
- `ohlc4`
- `open`
- `period`
- `second`
- `ticker`
- `tickerid`
- `time`
- `timenow`
- `tr`
- `volume`
- `vwap`
- `weekofyear`
- `year`

## Properties

- `barstate.isconfirmed`
- `barstate.isfirst`
- `barstate.ishistory`
- `barstate.islast`
- `barstate.isnew`
- `barstate.isrealtime`
- `strategy.closedtrades`
- `strategy.equity`
- `strategy.eventrades`
- `strategy.grossloss`
- `strategy.grossprofit`
- `strategy.initial_capital`
- `strategy.losstrades`
- `strategy.max_contracts_held_all`
- `strategy.max_contracts_held_long`
- `strategy.max_contracts_held_short`
- `strategy.max_drawdown`
- `strategy.netprofit`
- `strategy.openprofit`
- `strategy.opentrades`
- `strategy.position_avg_price`
- `strategy.position_entry_name`
- `strategy.position_size`
- `strategy.wintrades`
- `syminfo.mintick`
- `syminfo.pointvalue`
- `syminfo.prefix`
- `syminfo.root`
- `syminfo.session`
- `syminfo.timezone`

