pine_script_references/v4/categories/variables.md
# Variables

## Variables

- `accdist`
- `bar_index`
- `close`
- `dayofmonth`
- `dayofweek`
- `high`
- `hl2`
- `hlc3`
- `hour`
- `iii`
- `low`
- `minute`
- `month`
- `na`
- `nvi`
- `obv`
- `ohlc4`
- `open`
- `pvi`
- `pvt`
- `second`
- `time`
- `time_close`
- `time_tradingday`
- `timenow`
- `tr`
- `volume`
- `vwap`
- `wad`
- `weekofyear`
- `wvad`
- `year`

## Properties

- `barstate.isconfirmed`
- `barstate.isfirst`
- `barstate.ishistory`
- `barstate.islast`
- `barstate.islastconfirmedhistory`
- `barstate.isnew`
- `barstate.isrealtime`
- `session.ismarket`
- `session.ispostmarket`
- `session.ispremarket`
- `strategy.closedtrades`
- `strategy.equity`
- `strategy.eventrades`
- `strategy.grossloss`
- `strategy.grossprofit`
- `strategy.initial_capital`
- `strategy.losstrades`
- `strategy.max_contracts_held_all`
- `strategy.max_contracts_held_long`
- `strategy.max_contracts_held_short`
- `strategy.max_drawdown`
- `strategy.netprofit`
- `strategy.openprofit`
- `strategy.opentrades`
- `strategy.position_avg_price`
- `strategy.position_entry_name`
- `strategy.position_size`
- `strategy.wintrades`
- `syminfo.basecurrency`
- `syminfo.currency`
- `syminfo.description`
- `syminfo.mintick`
- `syminfo.pointvalue`
- `syminfo.prefix`
- `syminfo.root`
- `syminfo.session`
- `syminfo.ticker`
- `syminfo.tickerid`
- `syminfo.timezone`
- `syminfo.type`
- `timeframe.isdaily`
- `timeframe.isdwm`
- `timeframe.isintraday`
- `timeframe.isminutes`
- `timeframe.ismonthly`
- `timeframe.isseconds`
- `timeframe.isweekly`
- `timeframe.multiplier`
- `timeframe.period`

